--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@ sidebar_cats:
 - getting started
 - advanced
 - tutorials
+- subcategory
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -13,10 +14,13 @@ sidebar_cats:
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     <title>{{ page.title }} | Exit Games Photon Cloud Documentation .o.OoOo.</title>
-    <meta name="description" content="" />
-    <meta name="author" content="{{ page.author }}" />
-
+{% if page.description %}
+    <meta name="description" content="{{ page.description }}">
+{% endif %}
+    <meta name="author" content="{{ site.author.name }}" />
     <meta name="viewport" content="width=device-width; initial-scale=1.0" />
+    
+    <link href="{{ ASSET_PATH }}/css/eg.css" rel="stylesheet" media="all">
 
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
