… missing liquid markup in previous commit

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@ sidebar_cats:
         <nav>
             <ol>
         {% for cat in (site.categories) %}
-            <li>cat</li>
+            <li>{{ cat }}</li>
         {% endfor %}
             </ol>
             <ul>
