--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,8 @@
 ---
 sidebar_cats:
-- getting started
+- basic
 - advanced
 - tutorials
-- subcategory
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -34,11 +33,6 @@ sidebar_cats:
     
     <aside>
         <nav>
-            <ol>
-        {% for cat in (site.categories) %}
-            <li>{{ cat }}</li>
-        {% endfor %}
-            </ol>
             <ul>
         {% for cat in (page.sidebar_cats) %}
                 <li>
@@ -68,7 +62,7 @@ sidebar_cats:
     </div>
 
     <footer>
-            &copy; Copyright Exit Games
+        &copy; Copyright Exit Games
     </footer>
 
 </body>
