CHANGED: moved dir _shared >> shared

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,9 +19,9 @@ sidebar_cats:
     <meta name="author" content="{{ site.author.name }}" />
     <meta name="viewport" content="width=device-width; initial-scale=1.0" />
     
-    <link href="/_shared/css/eg.css" rel="stylesheet" media="all">
+    <link href="/shared/css/eg.css" rel="stylesheet" media="all">
 
-    <link rel="shortcut icon" href="/_shared/favicon.ico" />
+    <link rel="shortcut icon" href="/shared/favicon.ico" />
 </head>
 
 <body>
