--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,7 @@ sidebar_cats:
 </head>
 
 <body>
-
-<div class="page"></div>    
+<div class="page">
 
     <aside>
         <nav>
@@ -82,7 +81,8 @@ sidebar_cats:
             </div>
         </div>
     </footer>
-
+    
+</div>
 </body>
 
 </html>
